# aos-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
aos/: __main__.py  actions.py  aggregator.py  cli.py  config.py  health.py  model.py  registry.py  scaffold.py  server.py  tablefmt.py  tui.py
aos/collectors/: deadlines.py  git.py  graphify.py  processes.py  progress.py  security.py  sessions.py  tests.py
aos/web/: index.html
configs/: config.example.yaml  project.example.yaml
docs/: integration-new-project.md
docs/superpowers/plans/: 2026-06-19-aos-actions-web.md  2026-06-19-aos-core-cli.md  2026-06-19-aos-sensors-tui.md  2026-06-19-aos-v1-hardening.md
docs/superpowers/reports/: 2026-06-19-aos-actions-web-report.md  2026-06-19-aos-core-cli-report.md  2026-06-19-aos-sensors-tui-report.md  2026-06-19-aos-v1-hardening-report.md
docs/superpowers/specs/: 2026-06-19-project-dashboard-design.md
tests/: conftest.py  test_actions_dispatch.py  test_actions_misc.py  test_actions_runner.py  test_actions_tests.py  test_actions_validate.py  test_aggregator.py  test_aggregator_sensors.py  test_cli.py  test_cli_actions.py  test_cli_dash.py  test_cli_serve.py  test_collector_deadlines.py  test_collector_git.py  test_collector_graphify.py  test_collector_processes.py  test_collector_progress.py  test_collector_security.py  test_collector_sessions.py  test_collector_tests.py  test_config.py  test_config_autoscaffold_default.py  test_config_v3.py  test_health.py  test_health_security.py  test_model.py  test_model_sensors.py  test_registry.py  test_scaffold.py  test_scaffold_missing.py  test_security_examples.py  test_server_auth.py  test_server_http.py  test_server_wall.py  test_tablefmt.py  test_tui.py  test_web_assets.py  test_web_sensors.py
