[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-dashboard"
version = "0.1.0"
description = "Local project dashboard / control plane (aos)"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
aos = "aos.cli:main"

[tool.setuptools.packages.find]
include = ["aos*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
